--- a/ltgenp/package.json
+++ b/ltgenp/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ace-builds": "^1.2.8",
+    "art-template": "^4.12.1",
     "mustache": "^2.3.0",
     "store": "^2.0.12"
   }
