--- a/ltgenp/package.json
+++ b/ltgenp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ace-builds": "^1.2.8",
     "art-template": "^4.12.1",
+    "lodash": "^4.17.4",
     "mustache": "^2.3.0",
     "store": "^2.0.12"
   }
