use webpack-dev-server instead because of prefer page reload than module reolad

--- a/onix-web/package.json
+++ b/onix-web/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "npm run dev",
+    "start": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
@@ -22,7 +22,8 @@
     "rx": "^4.1.0",
     "store": "^2.0.12",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "webpack-dev-server": "^2.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
