--- a/onix-web/tsconfig.json
+++ b/onix-web/tsconfig.json
@@ -14,6 +14,11 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "paths": {
+      "app/*": [
+        "src/app/*"
+      ]
+    },
     "lib": [
       "es2018",
       "dom"
