--- a/onix-web/package.json
+++ b/onix-web/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "monaco-editor": "^0.15.6",
     "ng-zorro-antd": "^7.0.0-rc.3",
+    "ngx-monaco-editor": "^7.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
